--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python3-certbot-gandi (0.1.1) unstable; urgency=medium
+
+  * Python 3 fixes
+
+ -- Maximilian Falkenstein <mfalkenstein@sos.ethz.ch>  Sun, 06 Oct 2019 21:44:23 +0200
+
 python3-certbot-gandi (0.1) unstable; urgency=medium
 
   * Initial Release
